force-app/main/default/objects/TimeTable__c/TimeTable__c.object-meta.xml
<CustomObject>
    <label>TimeTable</label>
    <nameField>
        <label>TimeTable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeTables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>