force-app/main/default/objects/TimeTable__c/fields/Period_Time__c.field-meta.xml
<CustomField>
    <fullName>Period_Time__c</fullName>
    <label>Period Time</label>
    <type>Time</type>
</CustomField>