force-app/main/default/objects/TimeTable__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>TimeTables</relationshipLabel>
    <relationshipName>TimeTables</relationshipName>
    <type>Lookup</type>
</CustomField>