force-app/main/default/objects/TimeTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day__c</columns>
    <columns>Period_Time__c</columns>
    <columns>Class__c</columns>
    <columns>Teacher__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>equals</operation>
        <value>10th-A1</value>
    </filters>
    <label>All</label>
</ListView>